test/snapshots/wipple_test__nested-bounds.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - location:
      path: tests/nested-bounds.test.wipple
      start:
        line: 11
        column: 0
        index: 204
      end:
        line: 11
        column: 1
        index: 205
    severity: error
    template:
      id: unresolved-instance
      data:
        instance: W _
        trait: T
output: []
