test/snapshots/wipple_test__once.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics: []
output:
  - "Hello, world!"
  - "42"
  - "42"
