test/snapshots/wipple_test__random.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "0"
  - "1"
  - Has 1
  - Empty
