test/snapshots/wipple_test__recursive-instance.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics: []
output:
  - Has Has 42
