test/snapshots/wipple_test__remove-duplicates.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics: []
output:
  - "5"
  - "4"
  - "3"
  - "2"
  - "1"
