test/snapshots/wipple_test__repeat-missing-times.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
tests/repeat-missing-times.test.wipple:3:8: error: expected `times` after number
