test/snapshots/wipple_test__repeat.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "Hello, world!"
  - "Hello, world!"
  - "Hello, world!"
  - "Hello, world!"
