test/snapshots/wipple_test__replicate.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics: []
output:
  - abc
  - abc
  - abc
