test/snapshots/wipple_test__set.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "True"
  - "True"
  - "True"
  - "False"
