test/snapshots/wipple_test__show-variable.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics:
  - location:
      path: tests/show-variable.test.wipple
      start:
        line: 5
        column: 0
        index: 73
      end:
        line: 5
        column: 4
        index: 77
    severity: error
    message: "Can't describe `Cannot-Be-Shown`"
    description: "You can't display `Cannot-Be-Shown` on the screen or use it in placeholders because it can't be converted into text."
output: []
